--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>nopythoon</title>
+		<link type="text/css" rel="stylesheet" href="static/css/index.css">
 	<head>
 	<body>
 		<h1>Hello, world!</h1>
