--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>nopythoon</title>
 		<link type="text/css" rel="stylesheet" href="static/css/index.css">
-		<link type="Shortcut Icon" href="static/favicon.ico">
+		<link type="shortcut icon" href="favicon.ico">
 	<head>
 	<body>
 		<h1>Hello, world!</h1>
