--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<title>nopythoon</title>
 		<link type="text/css" rel="stylesheet" href="static/css/index.css">
 		<link type="shortcut icon" href="favicon.ico">
+		<!-- Bootstrap -->
+		<link rel="stylesheet" type="text/css" href="https://cnd.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<!-- 自动根据设备的大小调整页面的显示高度 -->
+		<meta name="viewport" content="width=decive-width,initial-scale=1">"
 	<head>
 	<body>
 		<h1>Hello, world!</h1>
