--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css" href="https://cnd.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<!-- 自动根据设备的大小调整页面的显示高度 -->
-		<meta name="viewport" content="width=decive-width,initial-scale=1">"
+		<meta name="viewport" content="width=decive-width,initial-scale=1">
 	<head>
 	<body>
-		<h1>Hello, world!</h1>
+		<form class="navbar-form">
+			<nav class="navbar navbar-defautl navbar-fixed-top navbar-inverse">
+				<div class="pull=left navbar-text">首页</div>
+				<div class="pull=left navbar-text">其他</div>
+				<div class="pull=right navbar-text">登录</div>
+			</nav>
+		</form>
+		<div class="container">
+			<h1 class="panel-title">Hello, world!</h1>
+			<div class="row">
+				<div class="col-lg-4 col-md-4">一</div>
+				<div class="col-lg-4 col-md-4">二</div>
+				<div class="col-lg-4 col-md-4">三</div>
+			</div>
+		</div>
 	</body>
 </html>
