--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>nopythoon</title>
 		<link type="text/css" rel="stylesheet" href="static/css/index.css">
 		<link type="shortcut icon" href="favicon.ico">
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 		<!-- 自动根据设备的大小调整页面的显示高度 -->
