--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 		<meta name="viewport" content="width=decive-width,initial-scale=1">
 	<head>
 	<body>
-		<form class="navbar-form">
+		<div class="container">
 			<nav class="navbar navbar-defautl navbar-fixed-top navbar-inverse">
 				<div class="pull=left navbar-text">首页</div>
 				<div class="pull=left navbar-text">其他</div>
 				<div class="pull=right navbar-text">登录</div>
 			</nav>
-		</form>
-		<div class="container">
+		</div>
 			<h1 class="panel-title">Hello, world!</h1>
 			<div class="row">
 				<div class="col-lg-4 col-md-4">一</div>
