--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
 		<!-- 自动根据设备的大小调整页面的显示高度 -->
-		<meta name="viewport" content="width=decive-width,initial-scale=1">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
 	<body>
+		<nav class="navbar navbar-defautl navbar-fixed-top navbar-inverse">
+			<div class="pull=left navbar-text">首页</div>
+			<div class="pull=left navbar-text">其他</div>
+			<div class="pull=right navbar-text">登录</div>
 		<div class="container">
-			<nav class="navbar navbar-defautl navbar-fixed-top navbar-inverse">
-				<div class="pull=left navbar-text">首页</div>
-				<div class="pull=left navbar-text">其他</div>
-				<div class="pull=right navbar-text">登录</div>
-			</nav>
-		</div>
 			<h1 class="panel-title">Hello, world!</h1>
 			<div class="row">
 				<div class="col-lg-4 col-md-4">一</div>
@@ -26,5 +24,6 @@
 				<div class="col-lg-4 col-md-4">三</div>
 			</div>
 		</div>
+		</nav>
 	</body>
 </html>
