--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
 	<body>
-		<nav class="navbar navbar-defautl navbar-fixed-top navbar-inverse">
+		<nav class="navbar navbar-defautl navbar-inverse">
 			<div class="pull=left navbar-text">首页</div>
 			<div class="pull=left navbar-text">其他</div>
 			<div class="pull=right navbar-text">登录</div>
+		</nav>
 		<div class="container">
 			<h1 class="panel-title">Hello, world!</h1>
 			<div class="row">
@@ -24,6 +25,5 @@
 				<div class="col-lg-4 col-md-4">三</div>
 			</div>
 		</div>
-		</nav>
 	</body>
 </html>
