--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<head>
 	<body>
 		<nav class="navbar navbar-defautl navbar-inverse">
-			<div class="pull=left navbar-text">首页</div>
-			<div class="pull=left navbar-text">其他</div>
-			<div class="pull=right navbar-text">登录</div>
+			<div class="pull=left navbar-text col-sm-4">首页</div>
+			<div class="pull=left navbar-text col-sm-4">其他</div>
+			<div class="pull=right navbar-text col-sm-4">登录</div>
 		</nav>
 		<div class="container">
 			<h1 class="panel-title">Hello, world!</h1>
 			<div class="row">
-				<div class="col-lg-4 col-md-4">一</div>
-				<div class="col-lg-4 col-md-4">二</div>
-				<div class="col-lg-4 col-md-4">三</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">一</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">二</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">三</div>
 			</div>
 		</div>
 	</body>
