--- a/index.html
+++ b/index.html
@@ -13,17 +13,13 @@
 	<head>
 	<body>
 		<nav class="navbar navbar-defautl navbar-inverse">
-			<div class="pull=left navbar-text col-sm-4">首页</div>
-			<div class="pull=left navbar-text col-sm-4">其他</div>
-			<div class="pull=right navbar-text col-sm-4">登录</div>
+			<div class="pull=left navbar-text">nopythonon</div>
 		</nav>
 		<div class="container">
-			<h1 class="panel-title">Hello, world!</h1>
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-4">一</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">二</div>
-				<div class="col-lg-4 col-md-4 col-sm-4">三</div>
-			</div>
+			<span class="h1">Hello, world!</span>
+			<p>
+				This is nopythonon.
+			</p>
 		</div>
 	</body>
 </html>
