--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>nopythoon</title>
-		<link type="text/css" rel="stylesheet" href="static/css/index.css">
 		<link type="shortcut icon" href="favicon.ico">
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<!-- Bootstrap -->
-		<link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
+		<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- 自动根据设备的大小调整页面的显示高度 -->
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
 	<body>
-		<nav class="navbar navbar-defautl navbar-inverse">
-			<div class="pull=left navbar-text">nopythonon</div>
-		</nav>
-		<div class="container">
-			<span class="h1">Hello, world!</span>
-			<p>
-				This is nopythonon.
-			</p>
+		<div class="container-fuild">
+			<div class="row">
+				<div class="col-xs-8">
+					<h1 class="text-primary text-center">nopythonon</h1>
+				</div>
+				<div class="col-xs-4">
+					<img src="favicon.ico">
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
