--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 		<!-- Bootstrap -->
 		<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<!-- 自动根据设备的大小调整页面的显示高度 -->
-		<meta name="viewport" content="width=device-width,initial-scale=1">
 	<head>
 	<body>
-		<div class="container-fuild">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-8">
-					<h1 class="text-primary text-center">nopythonon</h1>
+				<div class="col-xs-6">
+					<h2 class="text-primary text-center">nopythonon</h2>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-6">
 					<img src="favicon.ico">
 				</div>
 			</div>
