--- a/index.html
+++ b/index.html
@@ -7,15 +7,39 @@
 		<!-- Bootstrap -->
 		<!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<!-- CSS style -->
+		<style type="text/css">
+
+		</style>
+		<script type="text/javascript">
+			
+		</script>
 	<head>
 	<body>
 		<div class="container-fluid">
+			<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+				<a class="navbar-brand" href="#">
+					<img src="favicon.ico" width="30" height="30" alt="favicon.ico">
+				</a>
+				<div class="collapse navbar-collapse">
+					<div class="navbar-nav">
+						<a href="#" class="nav-item nav-link active">Home</a>
+						<a href="#" class="nav-item nav-link">Features</a>
+						<a href="#" class="nav-item nav-link">Pricing</a>
+					</div>
+				</div>
+			</nav>
 			<div class="row">
-				<div class="col-xs-6">
+				<div class="col-xs-8">
 					<h2 class="text-primary text-center">nopythonon</h2>
 				</div>
-				<div class="col-xs-6">
-					<img src="favicon.ico">
+				<div class="col-xs-4">
+					<img src="favicon.ico" class="img-responsive">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12">
+					<img src="static/pics/avatar.jpg" class="img-responsive" alt="avatar.jpg">
 				</div>
 			</div>
 		</div>
