--- a/index.html
+++ b/index.html
@@ -17,29 +17,24 @@
 	<head>
 	<body>
 		<div class="container-fluid">
-			<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-				<a class="navbar-brand" href="#">
-					<img src="favicon.ico" width="30" height="30" alt="favicon.ico">
-				</a>
-				<div class="collapse navbar-collapse">
-					<div class="navbar-nav">
-						<a href="#" class="nav-item nav-link active">Home</a>
-						<a href="#" class="nav-item nav-link">Features</a>
-						<a href="#" class="nav-item nav-link">Pricing</a>
-					</div>
-				</div>
-			</nav>
 			<div class="row">
-				<div class="col-xs-8">
-					<h2 class="text-primary text-center">nopythonon</h2>
-				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-1">
 					<img src="favicon.ico" class="img-responsive">
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12">
-					<img src="static/pics/avatar.jpg" class="img-responsive" alt="avatar.jpg">
+				<div class="col-xs-1">
+					<h3 class="text-primary text-center">Index</h3>
+				</div>
+				<div class="col-xs-1">
+					<h3 class="text-primary text-center">More</h3>
+				</div>
+				<div class="col-xs-7">
+					
+				</div>
+				<div class="col-xs-1">
+					<h3 class="text-primary text-center">Login</h3>
+				</div>
+				<div class="col-xs-1">
+					<h3 class="text-primary text-center">Register</h3>
 				</div>
 			</div>
 		</div>
