--- a/charset.html
+++ b/charset.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>nopythonon</title>
+  <title>nopythonon - subject</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="nopythonon.github.io" name="keywords">
-  <meta content="my own home page" name="description">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
@@ -28,10 +28,11 @@
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
 
+  
 </head>
 
 <body>
-	<!-- 折叠导航栏目 -->
+  <!-- 折叠导航栏目 -->
   <div class="collapse navbar-collapse custom-navmenu" id="main-navbar">
     <div class="container py-2 py-md-5">
       <div class="row align-items-start">
@@ -51,15 +52,15 @@
         <div class="col-md-4 d-none d-md-block">
           <h3>About Me</h3>
           <p>
-          	You can find me at <a href="https://www.cnblogs.com/noonjuan/" target="_blank">https://www.cnblogs.com/noonjuan/</a> or <a href="https://github.com/nopythonon" target="_blank">https://github.com/nopythonon</a> 
-          	<br> 
-          	<a href="#">Contact me via chenzewude@163.com</a>
+            You can find me at <a href="https://www.cnblogs.com/noonjuan/" target="_blank">https://www.cnblogs.com/noonjuan/</a> or <a href="https://github.com/nopythonon" target="_blank">https://github.com/nopythonon</a> 
+            <br> 
+            <a href="#">Contact me via chenzewude@163.com</a>
           </p>
         </div>
       </div>
     </div>
   </div>
-  <!-- 导航栏目按钮 -->
+
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
       <a class="navbar-brand" href="index.html">nopythonon</a>
@@ -70,49 +71,60 @@
 
     </div>
   </nav>
-  <!-- 主页面 -->
+
+
+
   <main id="main">
-  	<!-- 内容 -->
-    <div class="site-section site-portfolio">
+
+    <div class="site-section">
       <div class="container">
-        <div class="row mb-5 align-items-center">
-          <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hello, world!</h2>
-            <p class="mb-0">Share what you've learnt</p>
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+
+            <h2>Work Single Page</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
+              explicabo inventore.</p>
+
           </div>
-          <div class="col-md-12 col-lg-6 text-left text-lg-right" data-aos="fade-up" data-aos-delay="100">
-            <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".charset">Charset</a>
-              <a href="#" data-filter=".ccpp">C/C++</a>
+
+
+        </div>
+      </div>
+
+      <div class="site-section pb-0">
+        <div class="container">
+          <div class="row align-items-stretch">
+            <div class="col-md-8" data-aos="fade-up">
+              <img src="img/charset.png" alt="Image" class="img-fluid">
+            </div>
+            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
+              <div class="sticky-content">
+                <h3 class="h3">Charset</h3>
+                <p class="mb-4"><span class="text-muted">Design</span></p>
+
+                <div class="mb-5">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
+                    illum unde pariatur, enim tempora.</p>
+
+                </div>
+
+
+                <h4 class="h4 mb-3">What I did</h4>
+                <ul class="list-unstyled list-line mb-5">
+                  <li>Design</li>
+                  <li>HTML5/CSS3</li>
+                  <li>CMS</li>
+                  <li>Logo</li>
+                </ul>
+
+                <p><a href="#" class="readmore">Visit Website</a></p>
+              </div>
             </div>
           </div>
         </div>
-        <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item charset col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="charset.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>Charset</h3>
-                <span>字符编码</span>
-              </div>
-              <img class="img-fluid" src="img/charset.png">
-            </a>
-          </div>
-          <div class="item ccpp col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="ccpp.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>C/C++</h3>
-                <span>C语言</span>
-              </div>
-              <img class="img-fluid" src="img/ccpp.jpg">
-            </a>
-          </div>
-        </div>
       </div>
-    </div>
-   <div class="tlinks">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
   </main>
-  <!-- 注脚 -->
+  
   <footer class="footer" role="contentinfo">
     <div class="container">
       <div class="row">
